@@ -28,20 +28,6 @@ public interface Connection {
         GET, POST
     }
 
-	/**
-	 * Determine the behavior of this connection upon receiving a 4xx or 5xx error.
-	 * @param throwExceptionOnHttpError - Set to false if you would like the Response populated on 4xx and 5xx HTTP response codes.
-     * @return this Connection, for chaining
-	 */
-    public Connection throwExceptionOnHttpError(boolean throwExceptionOnHttpError);
-
-	/**
-	 * Ignore content-type header when parsing the response
-	 * @param ignoreContentType - Set to true if you would like the content type ignored on parsing the response into a Document.
-     * @return this Connection, for chaining
-	 */
-    public Connection ignoreContentType(boolean ignoreContentType);
-
     /**
      * Set the request URL to fetch. The protocol must be HTTP or HTTPS.
      * @param url URL to connect to
@@ -91,6 +77,25 @@ public interface Connection {
      * @return this Connection, for chaining
      */
     public Connection method(Method method);
+
+    /**
+     * Configures the connection to not throw exceptions when a HTTP error occurs. (4xx - 5xx, e.g. 404 or 500). By
+     * default this is <b>false</b>; an IOException is thrown if an error is encountered. If set to <b>true</b>, the
+     * response is populated with the error body, and the status message will reflect the error.
+     * @param ignoreHttpErrors - false (default) if HTTP errors should be ignored.
+     * @return this Connection, for chaining
+     */
+    public Connection ignoreHttpErrors(boolean ignoreHttpErrors);
+
+    /**
+     * Ignore the document's Content-Type when parsing the response. By default this is <b>false</b>, an unrecognised
+     * content-type will cause an IOException to be thrown. (This is to prevent producing garbage by attempting to parse
+     * a JPEG binary image, for example.) Set to true to force a parse attempt regardless of content type.
+     * @param ignoreContentType set to true if you would like the content type ignored on parsing the response into a
+     * Document.
+     * @return this Connection, for chaining
+     */
+    public Connection ignoreContentType(boolean ignoreContentType);
 
     /**
      * Add a request data parameter. Request parameters are sent in the request query string for GETs, and in the request
@@ -297,20 +302,6 @@ public interface Connection {
      * Represents a HTTP request.
      */
     public interface Request extends Base<Request> {
-
-        /**
-         * Will this request throw an IOException if a 4xx or 5xx error is returned 
-         * @return true if it will, false if it will populate the Response.  Default is true.
-         */
-        public boolean throwExceptionOnHttpError();
-        
-
-    	/**
-    	 * Determine the behavior of this request upon receiving a 4xx or 5xx error response.
-    	 * @param throwExceptionOnHttpError - Set to false if you would like the Response populated on 4xx and 5xx HTTP response codes.
-    	 */
-        public void throwExceptionOnHttpError(boolean throwExceptionOnHttpError);
-
         /**
          * Get the request timeout, in milliseconds.
          * @return the timeout in milliseconds.
@@ -337,6 +328,30 @@ public interface Connection {
          * @return this Connection, for chaining
          */
         public Request followRedirects(boolean followRedirects);
+
+        /**
+         * Get the current ignoreHttpErrors configuration.
+         * @return true if errors will be ignored; false (default) if HTTP errors will cause an IOException to be thrown.
+         */
+        public boolean ignoreHttpErrors();
+
+    	/**
+    	 * Configures the request to ignore HTTP errors in the response.
+    	 * @param ignoreHttpErrors set to true to ignore HTTP errors.
+    	 */
+        public void ignoreHttpErrors(boolean ignoreHttpErrors);
+
+        /**
+         * Get the current ignoreContentType configuration.
+         * @return true if invalid content-types will be ignored; false (default) if they will cause an IOException to be thrown.
+         */
+        public boolean ignoreContentType();
+
+        /**
+    	 * Configures the request to ignore the Content-Type of the response.
+    	 * @param ignoreContentType set to true to ignore the contenet type.
+    	 */
+        public void ignoreContentType(boolean ignoreContentType);
 
         /**
          * Add a data parameter to the request
@@ -400,8 +415,6 @@ public interface Connection {
          * @return body bytes
          */
         public byte[] bodyAsBytes();
-        
-        public void ignoreContentType(boolean ignoreContentType);
     }
 
     /**
